# KeyStonApp

./: .auto-fix-bot.yml  .gitignore  .replit  AGENTS.md  CHANGELOG.md  CI_ISSUES_FIX_REPORT.md  DIRECTORY.md  DOCUMENTATION_INDEX.md  FIRST_STAGE_SUMMARY.md  GOVERNANCE_FRAMEWORK.md  IMPLEMENTATION-TODO.md  INSTANT_GENERATION_ARCHITECTURE.md  LOCAL_FIXES_SUMMARY.md  PHASES-7-8-9-TODO.md  PROJECT_DELIVERY_REPORT.md  PROJECT_RESTRUCTURING_PLAN.md  PR_958_DAMAGE_REPORT.md  README_INSTANT_GENERATION.md  RISK_ASSESSMENT.md  auto-fix-bot.yml  code_assistant.py  comment_body.md  governance-manifest.yaml  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  replit.md  todo.md  tsconfig.json  vite.config.ts
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/scripts/: gate-enforcer.py
.github/workflows/: aaps-phase1-gates.yml  aaps-unified-gates.yml  autonomous-ci-guardian.yml  baseline-validation.yml  (+14 more)
00-namespaces/: NAMESPACES_ANALYSIS.md  todo-phase3-final.md  todo.md
design/: FileX-standard-template-v1.yaml
docs/: AI_MODEL_DEPLOYMENT.md  CONTROLPLANE_INTEGRATION_SUMMARY.md  EXTENDED_PROJECT_STRUCTURE_ANALYSIS.md  README.en.md  RUN_DEBUG_IMPLEMENTATION_SUMMARY.md  RUN_DEBUG_SYSTEM.md
governance/: CI_REFACTORING_GUIDE.md  RESTRUCTURING_SUMMARY.md  instant-governance-cli.py
namespace-mcp/: README.md
root/: ROOT_DIRECTORY_DESIGN_REPORT.md
server/: routes.ts  vite.ts
tools/: map-violations-to-playbooks.py
workspace/: README.md  ROOT_ARCHITECTURE.md  package-lock.json  package.json
workspace/QuantumFlow-Toolkit-main/backend/rust/: Cargo.toml
(+127 files in other folders)
