[package]
name = "quantumflow-scheduler"
version = "0.1.0"
edition = "2021"
description = "Rust scheduler for QuantumFlow Toolkit to manage hybrid quantum-classical workflows"
license = "MIT"
authors = ["QuantumFlow Toolkit Contributors"]

[lib]
name = "pyo3_runtime"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20.0", features = ["extension-module"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40.0", features = ["full"] }

[dev-dependencies]
tokio = { version = "1.40.0", features = ["test-util", "rt"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
